<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/lensImageView"
                android:layout_width="256dip"
                android:layout_height="256dip"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="6dip"
                android:layout_marginLeft="6dip"
                android:layout_marginRight="6dip"
                android:layout_marginTop="6dip"
                android:src="@drawable/no_photo" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="6dip"
                android:text="@string/caption_lens_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000"
                android:textStyle="bold" />

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dip"
                    android:text="@string/caption_cateogory"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/categoryTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/caption_na"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dip"
                    android:text="@string/caption_year_introduction"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/yearTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/caption_na"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dip"
                    android:text="@string/caption_fmin"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fminTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/caption_na"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dip"
                    android:text="@string/caption_fmax"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fmaxTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/caption_na"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dip"
                    android:text="@string/caption_amin"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/aminTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/caption_na"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dip"
                    android:text="@string/caption_amax"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/amaxTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/caption_na"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dip"
                    android:text="@string/caption_min_focus"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/minFocusTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/caption_na"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dip"
                    android:text="@string/caption_weight"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/weightTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/caption_na"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dip"
                    android:text="@string/caption_filter"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/filterTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/caption_na"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000" />
            </TableRow>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dip"
                android:text="@string/caption_reviewed_by"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000"
                android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/mflensesImageButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dip" 
                     android:background="#fff"
                    android:src="@drawable/mflenses_logo" />

                <ImageButton
                    android:id="@+id/pentaxForumImageButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="#000"
                    android:padding="6dip"
                    android:src="@drawable/pentax_logo" />
        
        </LinearLayout>
    </ScrollView>

</LinearLayout>